# src/main/java/io/swagger/api/UsersApiController.java
@@ -1,80 +1,0 @@
-package java.io.swagger.api;
-
-import io.swagger.api.UsersApi;
-import io.swagger.model.User;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.Parameter;
-import io.swagger.v3.oas.annotations.enums.ParameterIn;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.media.ArraySchema;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.security.SecurityRequirement;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.bind.annotation.CookieValue;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.multipart.MultipartFile;
-
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import javax.servlet.http.HttpServletRequest;
-import java.io.IOException;
-import java.io.swagger.services.DatabaseService;
-import java.sql.SQLException;
-import java.util.List;
-import java.util.Map;
-
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2025-01-16T11:52:43.332412975Z[GMT]")
-@RestController
-public class UsersApiController implements UsersApi
-{
-    private static final Logger logger = LoggerFactory.getLogger(UsersApiController.class);
-    private final ObjectMapper objectMapper;
-    private final HttpServletRequest request;
-
-    @Autowired
-    private DatabaseService databaseService;
-
-    @Autowired
-    public UsersApiController(ObjectMapper objectMapper, HttpServletRequest request)
-    {
-        this.objectMapper = objectMapper;
-        this.request = request;
-    }
-
-    public ResponseEntity<User> usersRegisterPost(
-            @Parameter(in = ParameterIn.DEFAULT, description = "", required=true, schema=@Schema())
-            @Valid @RequestBody User body
-) {
-        String accept = request.getHeader("Accept");
-
-        if (accept != null && accept.contains("application/json"))
-        {
-            try
-            {
-                User createdUser = databaseService.usersRegisterPost(body);
-                logger.info("Successfully created user with username: {}", body.getUsername());
-                return new ResponseEntity<>(createdUser, HttpStatus.CREATED);
-            }
-
-            catch (SQLException e)
-            {
-                throw new RuntimeException(e);
-            }
-        }
-
-        return new ResponseEntity<User>(HttpStatus.NOT_IMPLEMENTED);
-    }
-}
